--- a/rgd-gff/resources/rgd-gff_keys.properties
+++ b/rgd-gff/resources/rgd-gff_keys.properties
@@ -1,4 +1,4 @@
-Gene=key_primaryidentifier
+Gene=key_primaryidentifier, key_secondaryidentifier
 Chromosome=key_primaryidentifier
 Transcript=key_primaryidentifier
 Synonym=key_synonym
