--- a/rgd-gene/resources/rgd-gene_keys.properties
+++ b/rgd-gene/resources/rgd-gene_keys.properties
@@ -1,4 +1,4 @@
-Gene=key_primaryidentifier, key_secondaryidentifier, key_symbol_org
+Gene=key_primaryidentifier, key_secondaryidentifier, key_symbol_org, key_ncbigenenumber
 Chromosome=key_primaryidentifier
 Transcript=key_primaryidentifier
 Synonym=key_synonym
