--- a/e-qtl/resources/e-qtl_keys.properties
+++ b/e-qtl/resources/e-qtl_keys.properties
@@ -1,1 +1,11 @@
+Organism=key_taxonid
+Chromosome=key_primaryidentifier
+SSLP=key_primaryidentifier
+Gene=key_primaryidentifier
+Transcript=key_primaryidentifier
+Synonym=key_synonym
+DataSource=key_name
+DataSet=key_title
+Publication=key_pubmed
+ProbeSet=key_primaryidentifier
 
