updated eqtls with keys updated additions file to accurately reflect the overall model

--- a/e-qtl/resources/e-qtl_keys.properties
+++ b/e-qtl/resources/e-qtl_keys.properties
@@ -1,6 +1,6 @@
 Organism=key_taxonid
 Chromosome=key_primaryidentifier
-SSLP=key_primaryidentifier
+SSLP=key_primaryidentifier, key_symbol
 Gene=key_primaryidentifier
 Transcript=key_primaryidentifier
 Synonym=key_synonym
