model updates for 94

--- a/e-qtl/resources/e-qtl_keys.properties
+++ b/e-qtl/resources/e-qtl_keys.properties
@@ -5,7 +5,7 @@ Gene=key_primaryidentifier
 Transcript=key_primaryidentifier
 Synonym=key_synonym
 DataSource=key_name
-DataSet=key_title
+DataSet=key_name
 Publication=key_pubmed
 ProbeSet=key_primaryidentifier
 
