--- a/rgd-qtl/resources/rgd-qtl_keys.properties
+++ b/rgd-qtl/resources/rgd-qtl_keys.properties
@@ -4,7 +4,7 @@ Transcript=key_primaryidentifier
 Exon=key_primaryidentifier
 Synonym=key_synonym
 DataSource=key_name
-DataSet=key_title
+DataSet=key_name
 Organism=key_taxonid
 Publication=key_pubmed
 Strain=key_primaryidentifier
