updated genotype keys

--- a/rgd-genotype/resources/rgd-genotype_keys.properties
+++ b/rgd-genotype/resources/rgd-genotype_keys.properties
@@ -1,2 +1,2 @@
-Strain=key_primaryidentifier
-SNP=key_primaryidentifier
+Strain.key_primaryidentifier = primaryIdentifier
+SNP.key_primaryidentifier = primaryIdentifier
