updated keys to 92 syntax

--- a/e-qtl/resources/e-qtl_keys.properties
+++ b/e-qtl/resources/e-qtl_keys.properties
@@ -1,11 +1,10 @@
-Organism=key_taxonid
-Chromosome=key_primaryidentifier
-SSLP=key_primaryidentifier, key_symbol
-Gene=key_primaryidentifier
-Transcript=key_primaryidentifier
-Synonym=key_synonym
-DataSource=key_name
-DataSet=key_name
-Publication=key_pubmed
-ProbeSet=key_primaryidentifier
+Organism.key_taxonid=taxonId
+Chromosome.key_primaryidentifier=primaryIdentifier
+SimpleSequenceLengthVariation.key_primaryidentifier=primaryIdentifier
+SimpleSequenceLengthVariation.key_symbol=symbol
+Gene.key_primaryidentifier=primaryIdentifier
+DataSource.key_name=name
+DataSet.key_title=name
+Publication.key_pubmed=pubMedId
+Probe.key_primaryidentifier=primaryIdentifier
 
