--- a/rat-affy-probes/resources/rat-affy-probes_keys.properties
+++ b/rat-affy-probes/resources/rat-affy-probes_keys.properties
@@ -1,9 +1,6 @@
-Gene=key_primaryidentifier
-Chromosome=key_primaryidentifier
-Transcript=key_primaryidentifier
-Synonym=key_synonym
-DataSource=key_name
-DataSet=key_title
-Organism=key_taxonid
-Publication=key_pubmed
-Probe=key_primaryidentifier
+Gene.key_primaryidentifier=primaryIdentifier
+Chromosome.key_primaryidentifier=primaryIdentifier
+DataSource.key_name=name
+DataSet.key_title=name
+Organism.key_taxonid=taxonId
+Probe.key_primaryidentifier=primaryIdentifier
