updated keys to post 92 syntax

--- a/rgd-do-annot/resources/rgd-do-annot_keys.properties
+++ b/rgd-do-annot/resources/rgd-do-annot_keys.properties
@@ -1,9 +1,7 @@
-Gene=key_secondaryidentifier, key_primaryidentifier
-Protein=key_primaryacc
-Organism=key_taxonid
-OntologyTerm=key_identifier
-DOEvidenceCode=key_code
-Publication=key_pubmed
-DataSet=key_title
-DataSource=key_name
-Synonym=key_synonym
+Gene.key_primaryidentifier=primaryIdentifier
+Organism.key_taxonid=taxonId
+OntologyTerm.key_identifier=identifier
+DOEvidenceCode.key_code=code
+Publication.key_pubmed=pubMedId
+DataSet.key_title=name
+DataSource.key_name=name
