--- a/rgd-gene/resources/rgd-gene_keys.properties
+++ b/rgd-gene/resources/rgd-gene_keys.properties
@@ -1,6 +1,6 @@
-Gene=key_primaryidentifier, key_secondaryidentifier, key_symbol_org, key_ncbigenenumber
-Chromosome=key_primaryidentifier
-Transcript=key_primaryidentifier
-Synonym=key_synonym
-Organism=key_taxonid
-Publication=key_pubmed
+Gene.key_primaryidentifier=primaryidentifier
+Gene.key_symbol_org=symbol, organism
+Gene.key_ncbigenenumber=ncbiGeneNumber
+Chromosome.key_primaryidentifier=primaryIdentifier
+Organism.key_taxonid=taxonId
+Publication.key_pubmed=pubMedId
