--- a/rgd-sslp-alleles/resources/rgd-sslp-alleles_keys.properties
+++ b/rgd-sslp-alleles/resources/rgd-sslp-alleles_keys.properties
@@ -1,4 +1,4 @@
-Organism=key_taxonid
-Chromosome=key_primaryidentifier
-SSLP=key_primaryidentifier
-Strain=key_symbol
+Organism.key_taxonid=taxonId
+Chromosome.key_primaryidentifier=primaryIdentifier
+SSLP.key_primaryidentifier=primaryIdentifier
+Strain.key_symbol=symbol
