--- a/rgd-gff/resources/rgd-gff_keys.properties
+++ b/rgd-gff/resources/rgd-gff_keys.properties
@@ -1,5 +1,4 @@
-Gene=key_primaryidentifier, key_secondaryidentifier
-Chromosome=key_primaryidentifier
-Synonym=key_synonym
-DataSource=key_name
-Organism=key_taxonid
+Gene.key_primaryidentifier=primaryIdentifier
+Chromosome.key_primaryidentifier=primaryIdentifier
+DataSource.key_name=name
+Organism.key_taxonid=taxonId
