--- a/rgd-mp-annot/resources/rgd-mp-annot_keys.properties
+++ b/rgd-mp-annot/resources/rgd-mp-annot_keys.properties
@@ -1,9 +1,8 @@
-Gene=key_secondaryidentifier, key_primaryidentifier
-Protein=key_primaryacc
-Organism=key_taxonid
-OntologyTerm=key_identifier
-MPEvidenceCode=key_code
-Publication=key_pubmed
-DataSet=key_title
-DataSource=key_name
-Synonym=key_synonym
+Gene.key_primaryidentifier=primaryIdentifier
+Protein.key_primaryacc=primaryAccession
+Organism.key_taxonid=taxonId
+OntologyTerm.key_identifier=identifier
+MPEvidenceCode.key_code=code
+Publication.key_pubmed=pubMedId
+DataSet.key_title=name
+DataSource.key_name=name
