--- a/rgd-pharmgkb/resources/rgd-pharmgkb_keys.properties
+++ b/rgd-pharmgkb/resources/rgd-pharmgkb_keys.properties
@@ -1,7 +1,8 @@
-Gene=key_primaryidentifier, key_secondaryidentifier, key_symbol_org, key_ncbigenenumber
-Chromosome=key_primaryidentifier
-Synonym=key_synonym
-DataSource=key_name
-DataSet=key_name
-Organism=key_taxonid
-Publication=key_pubmed
+Gene.key_primaryidentifier=primaryIdentifier
+Gene.key_symbol_org=symbol, organism
+Gene.key_ncbigenenumber=ncbiGeneNumber
+Chromosome.key_primaryidentifier=primaryIdentifier
+DataSource.key_name=name
+DataSet.key_title=name
+Organism.key_taxonid=taxonId
+Publication.key_pubmed=pubMedId
