--- a/rgd-qtl/resources/rgd-qtl_keys.properties
+++ b/rgd-qtl/resources/rgd-qtl_keys.properties
@@ -1,7 +1,6 @@
-Qtl=key_primaryidentifier
-Synonym=key_synonym
-DataSource=key_name
-DataSet=key_name
-Organism=key_taxonid
-Publication=key_pubmed
-Strain=key_primaryidentifier
+Qtl.key_primaryidentifier=primaryIdentifier
+DataSource.key_name=name
+DataSet.key_title=name
+Organism.key_taxonid=taxonId
+Publication.key_pubmed=pubMedId
+Strain.key_primaryidentifier=primaryIdentifier
