--- a/rgd-sslps/resources/rgd-sslps_keys.properties
+++ b/rgd-sslps/resources/rgd-sslps_keys.properties
@@ -1,3 +1,4 @@
-Organism=key_taxonid
-Chromosome=key_primaryidentifier
-SSLP=key_primaryidentifier, key_symbol
+Organism.key_taxonid=taxonId
+Chromosome.key_primaryidentifier=primaryIdentifier
+SSLP.key_primaryidentifier=primaryIdentifier
+SSLP.key_symbol=symbol
