--- a/rgd-qtl/resources/rgd-qtl_keys.properties
+++ b/rgd-qtl/resources/rgd-qtl_keys.properties
@@ -4,3 +4,5 @@ DataSet.key_title=name
 Organism.key_taxonid=taxonId
 Publication.key_pubmed=pubMedId
 Strain.key_primaryidentifier=primaryIdentifier
+Gene.key_primaryidentifier=primaryIdentifier
+Chromosome.key_primaryidentifier=primaryIdentifier
