removed chromosome keys from sources that were unnecessary removed unneeded additions file

--- a/rgd-snp/resources/rgd-snp_keys.properties
+++ b/rgd-snp/resources/rgd-snp_keys.properties
@@ -1,2 +1,4 @@
 Organism.key_taxonid=taxonId
 Chromosome.key_primaryidentifier=primaryIdentifier
+rsSNP.key_primaryidentifier=primaryIdentifier
+ssSNP.key_primaryidentifier=primaryIdentifier
