updated small typo in do build.xml added two new ontology sources mgi-maga-ont : Mouse Adult Gross Anataomy cl-ont : Cell Type

--- a/mgi-maga-ont/build.xml
+++ b/mgi-maga-ont/build.xml
@@ -1,4 +1,4 @@
-<project name="rgd-do-ont" default="default" basedir=".">
+<project name="mgi-maga-ont" default="default" basedir=".">
   <description>build, test, package go</description>
   
   <import file="../../../imbuild/source.xml"/>
