updated Ontology.name and Ontology.url for each ontology

--- a/cl-ont/project.properties
+++ b/cl-ont/project.properties
@@ -3,7 +3,7 @@ compile.dependencies = intermine/objectstore/main,bio/core/main,\
                        bio/core/main
 
 have.file.dag = true
-dag.ontology.name=CL
+dag.ontology.name=Cell Type
 dag.term.class=CLTerm
 dag.source.url=http://lists.sourceforge.net/lists/listinfo/obo-cell-type
 
