--- a/mgi-maga-ont/project.properties
+++ b/mgi-maga-ont/project.properties
@@ -3,7 +3,7 @@ compile.dependencies = intermine/objectstore/main,bio/core/main,\
                        bio/core/main
 
 have.file.dag = true
-dag.ontology.name=MA
+dag.ontology.name= Mouse Adult Gross Anatomy
 dag.term.class=MATerm
 dag.source.url=http://www.informatics.jax.org/searches/AMA_form.shtml
 
