--- a/rgd-do-ont/project.properties
+++ b/rgd-do-ont/project.properties
@@ -3,12 +3,12 @@ compile.dependencies = intermine/objectstore/main,bio/core/main,\
                        bio/core/main
 
 have.file.dag = true
-dag.ontology.name=DO
-dag.term.class=DOTerm
-dag.source.url=http://rgd.mcw.edu/
+dag.ontology.name= Disease
+dag.term.class = DOTerm
+dag.source.url = http://rgd.mcw.edu/
 
 # target.model passed in by caller
 
-intermine.properties.file = flymine.properties
+intermine.properties.file = ratmine.properties
 
 
