--- a/rgd-mp-ont/project.properties
+++ b/rgd-mp-ont/project.properties
@@ -3,12 +3,12 @@ compile.dependencies = intermine/objectstore/main,bio/core/main,\
                        bio/core/main
 
 have.file.dag = true
-dag.ontology.name=MP
+dag.ontology.name= Mammalian Phenotype
 dag.term.class=MPTerm
 dag.source.url=http://www.informatics.jax.org/
 
 # target.model passed in by caller
 
-intermine.properties.file = flymine.properties
+intermine.properties.file = ratmine.properties
 
 
