--- a/rgd-pw-ont/project.properties
+++ b/rgd-pw-ont/project.properties
@@ -3,12 +3,12 @@ compile.dependencies = intermine/objectstore/main,bio/core/main,\
                        bio/core/main
 
 have.file.dag = true
-dag.ontology.name=PW
+dag.ontology.name= Pathway
 dag.term.class=PWTerm
 dag.source.url=http://rgd.mcw.edu/
 
 # target.model passed in by caller
 
-intermine.properties.file = flymine.properties
+intermine.properties.file = ratmine.properties
 
 
