--- a/rgd-mp-annot/main/build.xml
+++ b/rgd-mp-annot/main/build.xml
@@ -1,4 +1,4 @@
-<project name="go-annotation-tasks" default="default" basedir=".">
+<project name="rgd-mp-annotation-tasks" default="default" basedir=".">
   <description>build rgd-mp-annotation tasks</description>
   <import file="../../../../imbuild/library.xml"/> 
 </project>
