--- a/rgd-pw-annot/build.xml
+++ b/rgd-pw-annot/build.xml
@@ -1,4 +1,4 @@
-<project name="go-annotation" default="default" basedir=".">
+<project name="rgd-pw-annotation" default="default" basedir=".">
   <description>build, test, package go-annotation</description>
   
   <import file="../../../imbuild/source.xml"/>
