updates to annotation

--- a/geo-annotations/resources/geo-annotations_keys.properties
+++ b/geo-annotations/resources/geo-annotations_keys.properties
@@ -3,4 +3,7 @@ DataSource.key = name
 SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
+CLTerm.key_identifier = identifier
+MATerm.key_identifier = identifier
+RSTerm.key_identifier = identifier
 Publication.key = pubMedId
