--- a/geo-series/resources/geo-series_keys.properties
+++ b/geo-series/resources/geo-series_keys.properties
@@ -6,3 +6,4 @@ Ontology.key = name
 Publication.key = pubMedId
 Array.key = primaryIdentifier
 GEODataSet.key = geoAccession
+GEOSeries.key = geoAccession
