--- a/geo-samples/resources/geo-samples_keys.properties
+++ b/geo-samples/resources/geo-samples_keys.properties
@@ -5,3 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 Array.key_primaryidentifier = primaryIdentifier
+GEORecord.key_geoaccssion = geoAccession
