--- a/geo-samples/project.properties
+++ b/geo-samples/project.properties
@@ -2,5 +2,5 @@ compile.dependencies = intermine/objectstore/main, \
            bio/core/main, \
            intermine/integrate/main
 
-have.file.xml.tgt = true
+have.large.file.xml.tgt = true
 
