updated keys with GEORecord

--- a/geo-annotations/resources/geo-annotations_keys.properties
+++ b/geo-annotations/resources/geo-annotations_keys.properties
@@ -7,3 +7,4 @@ CLTerm.key_identifier = identifier
 MATerm.key_identifier = identifier
 RSTerm.key_identifier = identifier
 Publication.key = pubMedId
+GEORecord.key = geoAccession
