--- a/geo-datasets/resources/geo-datasets_keys.properties
+++ b/geo-datasets/resources/geo-datasets_keys.properties
@@ -5,4 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 Array.key = primaryIdentifier
-GEODataSet.key = geoAccession
+GEORecord.key = geoAccession
