--- a/geo-series/resources/geo-series_keys.properties
+++ b/geo-series/resources/geo-series_keys.properties
@@ -5,5 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 Array.key = primaryIdentifier
-GEODataSet.key = geoAccession
-GEOSeries.key = geoAccession
+GEORecord.key = geoAccession
