updated keys updated model

--- a/geo-series/resources/geo-series_keys.properties
+++ b/geo-series/resources/geo-series_keys.properties
@@ -5,4 +5,4 @@ Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
 Array.key = primaryIdentifier
-GEORecord.key = geoAccession
+GEORecord.key_geoaccession = geoAccession
