--- a/cn-polyphen/resources/cn-polyphen_keys.properties
+++ b/cn-polyphen/resources/cn-polyphen_keys.properties
@@ -4,5 +4,5 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
-Array.key = primaryIdentifier
-GEORecord.key_geoaccession = geoAccession
+Protein.key = primaryAccession
+VariantTranscript.key = primaryIdentifier
