added new source rgd-orthologs

--- a/rgd-sslp-gff/resources/rgd-sslp-gff_keys.properties
+++ b/rgd-sslp-gff/resources/rgd-sslp-gff_keys.properties
@@ -2,5 +2,7 @@ DataSet.key = name
 DataSource.key = name
 SOTerm.key = name, ontology
 Organism.key = taxonId
-Ontology.key = name
 Publication.key = pubMedId
+SSLP.key_primaryidentifier=primaryIdentifier
+SSLP.key_symbol=symbol
+Chromosome.key_primaryidentifier=primaryIdentifier
