updated key to allow compound id, organism key for chromosomes

--- a/rgd-gff/resources/rgd-gff_keys.properties
+++ b/rgd-gff/resources/rgd-gff_keys.properties
@@ -1,4 +1,4 @@
 Gene.key_primaryidentifier=primaryIdentifier
-Chromosome.key_primaryidentifier=primaryIdentifier
+Chromosome.key_primaryidentifier_organism=primaryIdentifier, organism
 DataSource.key_name=name
 Organism.key_taxonid=taxonId
