added primaryidentifier keys to new classes being loaded via gff

--- a/rgd-gff/resources/rgd-gff_keys.properties
+++ b/rgd-gff/resources/rgd-gff_keys.properties
@@ -1,4 +1,8 @@
 Gene.key_primaryidentifier=primaryIdentifier
+QTL.key_primaryidentifier=primaryIdentifier
+SimpleSequenceLengthVariation.key_primaryidentifier=primaryIdentifier
+mRNA.key_primaryidentifier=primaryIdentifier
+Congenic.key_primaryidentifier=primaryIdentifier
 Chromosome.key_primaryidentifier_organism=primaryIdentifier, organism
 DataSource.key_name=name
 Organism.key_taxonid=taxonId
