added omim source

--- a/rgd-gene/resources/rgd-gene_keys.properties
+++ b/rgd-gene/resources/rgd-gene_keys.properties
@@ -3,3 +3,4 @@ Gene.key_symbol_org=symbol, organism
 Gene.key_ncbigenenumber=ncbiGeneNumber
 Organism.key_taxonid=taxonId
 Publication.key_pubmed=pubMedId
+OMIM.key_primaryidentifier=primaryIdentifier
