--- a/omim2/resources/omim2_keys.properties
+++ b/omim2/resources/omim2_keys.properties
@@ -4,4 +4,4 @@ SOTerm.key = name, ontology
 Organism.key = taxonId
 Ontology.key = name
 Publication.key = pubMedId
-OMIM.primaryidentifier_title = primaryIdentifier, title
+OMIM.primaryidentifier = primaryIdentifier
