updated key definitions

--- a/e-qtl/resources/e-qtl_keys.properties
+++ b/e-qtl/resources/e-qtl_keys.properties
@@ -6,5 +6,5 @@ Gene.key_primaryidentifier=primaryIdentifier
 DataSource.key_name=name
 DataSet.key_title=name
 Publication.key_pubmed=pubMedId
-Probe.key_primaryidentifier=primaryIdentifier
+ProbeSet.key_primaryidentifier=primaryIdentifier
 
