--- a/rat-affy-probes/resources/rat-affy-probes_keys.properties
+++ b/rat-affy-probes/resources/rat-affy-probes_keys.properties
@@ -3,4 +3,4 @@ Chromosome.key_primaryidentifier=primaryIdentifier
 DataSource.key_name=name
 DataSet.key_title=name
 Organism.key_taxonid=taxonId
-Probe.key_primaryidentifier=primaryIdentifier
+ProbeSet.key_primaryidentifier=primaryIdentifier
