--- a/rgd-gene/resources/rgd-gene_keys.properties
+++ b/rgd-gene/resources/rgd-gene_keys.properties
@@ -4,3 +4,4 @@ Gene.key_ncbigenenumber=ncbiGeneNumber
 Organism.key_taxonid=taxonId
 Publication.key_pubmed=pubMedId
 OMIM.key_primaryidentifier=primaryIdentifier
+Protein.key_primaryaccession=primaryAccession
