changed due to NCBO GEO data loading requirements

--- a/rat-affy-probes/resources/rat-affy-probes_keys.properties
+++ b/rat-affy-probes/resources/rat-affy-probes_keys.properties
@@ -1,4 +1,5 @@
 Gene.key_primaryidentifier=primaryIdentifier
+Gene.key_ncbigenenumber=ncbiGeneNumber
 Chromosome.key_primaryidentifier=primaryIdentifier
 DataSource.key_name=name
 DataSet.key_title=name
