added ncbiGeneNumber key in order to correctly merge KEGG data

--- a/rgd-gff/resources/rgd-gff_keys.properties
+++ b/rgd-gff/resources/rgd-gff_keys.properties
@@ -1,4 +1,5 @@
 Gene.key_primaryidentifier=primaryIdentifier
+Gene.key_ncbigenenumber_organism=ncbiGeneNumber, organism
 QTL.key_primaryidentifier=primaryIdentifier
 SimpleSequenceLengthVariation.key_primaryidentifier=primaryIdentifier
 mRNA.key_primaryidentifier=primaryIdentifier
