updated keys to merge SOTerms updated parsing of GFF3 attribute field

--- a/rgd-gff/resources/rgd-gff_keys.properties
+++ b/rgd-gff/resources/rgd-gff_keys.properties
@@ -7,3 +7,4 @@ Congenic.key_primaryidentifier=primaryIdentifier
 Chromosome.key_primaryidentifier_organism=primaryIdentifier, organism
 DataSource.key_name=name
 Organism.key_taxonid=taxonId
+SOTerm.key=name
