--- a/rgd-do-annot/main/resources/rgd-do-annot_config.properties
+++ b/rgd-do-annot/main/resources/rgd-do-annot_config.properties
@@ -7,9 +7,12 @@
 # Mouse - RGD
 10090.identifier=primaryIdentifier
 10090.typeAnnotated=gene
+10090.typeAnnotated=qtl
 # Rat - RGD
 10116.identifier=primaryIdentifier
 10116.typeAnnotated=gene
+10116.typeAnnotated=qtl
 # Human - RGD
 9606.identifier=primaryIdentifier
 9606.typeAnnotated=gene
+9606.typeAnnotated=qtl
