changes to annotation parsers to properly annotate QTL records changed to GFF parser to properly set QTL primaryIdentifier

--- a/rgd-mp-annot/resources/rgd-mp-annot_keys.properties
+++ b/rgd-mp-annot/resources/rgd-mp-annot_keys.properties
@@ -1,4 +1,5 @@
 Gene.key_primaryidentifier=primaryIdentifier
+QTL.key_primaryidentifier=primaryIdentifier
 Protein.key_primaryacc=primaryAccession
 Organism.key_taxonid=taxonId
 OntologyTerm.key_identifier=identifier
