--- a/rgd-do-annot/resources/rgd-do-annot_keys.properties
+++ b/rgd-do-annot/resources/rgd-do-annot_keys.properties
@@ -1,4 +1,5 @@
 Gene.key_primaryidentifier=primaryIdentifier
+QTL.key_primaryidentifier=primaryIdentifier
 Organism.key_taxonid=taxonId
 OntologyTerm.key_identifier=identifier
 DOEvidenceCode.key_code=code
