--- a/rgd-pw-annot/resources/rgd-pw-annot_keys.properties
+++ b/rgd-pw-annot/resources/rgd-pw-annot_keys.properties
@@ -1,4 +1,5 @@
 Gene.key_primaryidentifier=primaryIdentifier
+QTL.key_primaryidentifier=primaryIdentifier
 Protein.key_primaryacc=primaryAccession
 Organism.key_taxonid=taxonId
 OntologyTerm.key_identifier=identifier
